Fixed detection selection for show on different time spans defaulting to the last 50 events. This fixes the week or "last 30 days" view so it doesnt look empty
